Remove old text about HSL calculation from About section

--- a/index.html
+++ b/index.html
@@ -148,9 +148,7 @@
             <td>Based on energy<br/><br/>higher energy = less light for major or less dark for minor</td>
           </tr>
         </tbody>
-      </table><br/><br/>
-
-	    Hue is determined from key, congruent with the <br/><br/>
+      </table><br/>
             
 	    This project uses an express backend, a bootstrap frontend, and the Spotify api.<br/><br>
             <strong><em><a style="color: #454545" href="https://github.com/iyves/mood-music" target="_blank" rel="noopener">Click here to see the github repository for this project.</a></em></strong>
