--- a/index.html
+++ b/index.html
@@ -167,15 +167,20 @@
     
     var changeSlide = function(index) {
       $('.colorSlide:nth-child(' + currSlide +')').css('display', 'none');
-      if ($('.colorSlide:nth-child(' + currSlide +') audio').attr('src') != 'null')
-        $('.colorSlide:nth-child(' + currSlide +') audio')[0].pause();
+      if ($('.colorSlide:nth-child(' + currSlide +') audio').attr('src') != 'null') {
+        if($('.colorSlide:nth-child(' + currSlide +') audio')[0] !== undefined) {
+          $('.colorSlide:nth-child(' + currSlide +') audio')[0].pause();
+        }
+      }
       currSlide = index;
       if (currSlide > maxSlide){
         currSlide = 1;
       }
       $('.colorSlide:nth-child(' + currSlide +')').css('display', 'block');
       if (!muted && $('.colorSlide:nth-child(' + currSlide +') audio').attr('src') != 'null')
-        $('.colorSlide:nth-child(' + currSlide +') audio')[0].play();
+        if($('.colorSlide:nth-child(' + currSlide +') audio')[0] !== undefined) {
+          $('.colorSlide:nth-child(' + currSlide +') audio')[0].play();
+        }
     }
 
     setInterval(function(){
@@ -185,7 +190,8 @@
 
     $('#mute').click(function(e) {
       muted = !muted;
-      if ($('.colorSlide:nth-child(' + currSlide +') audio').attr('src') != 'null') {
+      if ($('.colorSlide:nth-child(' + currSlide +') audio').attr('src') != 'null' &&
+        $('.colorSlide:nth-child(' + currSlide +') audio')[0] !== undefined) {
         if (muted)
         {
           $('.colorSlide:nth-child(' + currSlide +') audio')[0].pause();
@@ -237,8 +243,11 @@
           }
         $('#output').html(o);
         $('.colorSlide:nth-child(1)').css('display', 'block');
-        if (!muted && $('.colorSlide:nth-child(' + currSlide +') audio').attr('src') != 'null')
-          $('.colorSlide:nth-child(1) audio')[0].play();
+        if (!muted && $('.colorSlide:nth-child(' + currSlide +') audio').attr('src') != 'null') {
+          if($('.colorSlide:nth-child(1) audio')[0] !== undefined) {
+            $('.colorSlide:nth-child(1) audio')[0].play();
+          }
+        }
         
         var c ='';
         for(var i = 0; i < data.length; i += 1) {
